# SparseGeometricSignalTransport

./: .env  .gitignore  Architecture.md  CLMWithArch.md  README.md  README_portfolio.md  Whentransformermanipulatemanifolds.md  architecture.ipynb  cursor_casual_greeting.md  jarvis.py  notes_claude_3101003pm.md  pdf1.txt  pdf2.txt  pyproject.toml
ablation_results/: Copy_of_v5_ablation-2.ipynb  Copy_of_v5_ablation-3.ipynb  Copy_of_v5_ablation.ipynb  v5_ablation-2.ipynb  v5_ablation-3.ipynb  v5_ablation-4.ipynb  v5_ablation-5.ipynb  v5_ablation.ipynb  v6_ablation-2.ipynb  v6_ablation-3.ipynb  v6_ablation.ipynb
jarvis/: README.md  __init__.py  agent.py  cli.py  config.py  email_handler.py  service.py  tools.py
jarvis_agent.egg-info/: PKG-INFO  SOURCES.txt
study_exhaustive/: 00_roadmap.md  01_linear_algebra_foundations.md  02_multivariable_calculus_optimization.md  03_fourier_analysis.md  04_graph_theory_spectral.md  05_differential_geometry.md  06_fiber_bundles_gauge_theory.md  07_finsler_geometry.md  08_signal_processing_compressed_sensing.md  09_hopfield_networks_energy_models.md  10_neural_architectures.md  11_spectral_methods_deep_learning.md  12_thesis_sgst_architecture.md  13_curvbias_position_encoding.md  14_spectral_sparsity_hypothesis.md  15_synthesis_and_future.md  INDEPENDENT_RESEARCH_DISCLOSURE.docx  INDEPENDENT_RESEARCH_DISCLOSURE.md
v10_contextual_manifold/: Mathematical_Framework_v10_1.ipynb  README.md  README_PhD_Exploration_Gemini.md  README_PhD_Exploration_claude copy.md  README_PhD_Exploration_claude_v2.md  architecture_v10.ipynb  (+4 more)
v12/: README.md  (+22 more)
(+79 files in other folders)
