[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-agent"
version = "0.1.0"
description = "Local AI agent accessible via email, powered by Ollama"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]
